# BizAnalyst-Env

./: .gitignore  Dockerfile  FIXES_COMPLETE.md  INSTALLATION_REPORT.md  README.md  SUCCESS_REPORT.md  baseline.py  check_answers.py  inference.py  northwind.db  openenv.yaml  pyproject.toml  requirements.txt  scout_server.py  server.py  server_old.py  start.bat  start.sh  test_planted.py
agent/: __init__.py  analyzer.py  core.py  memory.py  scanner.py
environment/: __init__.py  anomaly_planter.py  database.py  env.py  models.py  northwind_adapter.py  tasks.py  validators.py
frontend/: index.html
server/: __init__.py  app.py
tests/: test_api.py  test_env.py  test_graders.py
