[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-ai-bizanalyst"
version = "1.0.0"
description = "SCOUT AI - Autonomous Business Analyst Agent for OpenEnv"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Abhishek Shelke"}
]
keywords = ["openenv", "business-intelligence", "sql", "ai-agent", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/abhishelke1/BizAnalyst-Env"
Repository = "https://github.com/abhishelke1/BizAnalyst-Env"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "agent*"]

[project.scripts]
scout-server = "scout_server:main"
